@@ -1,3 +1,9 @@
+SPREAD-phy version 1.0.5 release candidate
+------------------------------------------------
+
+* Progress bar for tree slicer.
+
+
 April 21, 2012: SPREAD-phy version 1.0.4 released
 ------------------------------------------------
 
